# small-case

./: README.en.md  README.md
algorithm/n-gram/java/: Test.java
algorithm/n-gram/rust/: main.rs
local-control/: readme.txt
local-control/local-control-app/: App.vue  manifest.json  pages.json
local-control/local-control-app/pages/index/: index.vue
local-control/local-control-server/: Cargo.toml
small-project/local-control/local-control-client/: package-lock.json  package.json
small-project/local-control/local-control-client/src-tauri/: Cargo.toml  tauri.conf.json
small-project/local-control/local-control-client/src-tauri/src/: main.rs
small-project/local-control/local-control-server/src/: main.rs
small-project/quick-macro/: Cargo.toml
small-project/quick-macro/src/: main.rs
stm32/blinky-rust/: Cargo.toml  memory.x
stm32/blinky-rust/.cargo/: config
tauri/: package-lock.json  package.json
tauri/public/: splashscreen.html  test.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
tauri/src/components/: HelloWorld.vue
web/01/: index.html
websocket/game-server/: pom.xml
websocket/game-server/src/main/java/cn/zyx/game/: GameApplication.java
websocket/game-server/src/main/java/cn/zyx/game/config/: WebSocketConfig.java
websocket/game-server/src/main/java/cn/zyx/game/entity/: Role.java
websocket/game-server/src/main/java/cn/zyx/game/websocket/: WebSocketServer.java
websocket/game-web/: index.html
